[Fix] Title right aligned

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -46,7 +46,7 @@ body {
 
 .page-title {
   padding-top: 15vh;
-  padding-left: 1em;
+  padding-left: 3em;
   font-size: 3em;
   margin-top: 0;
   margin-bottom: 1em;
